package com.panda.design.creative.builder;

public class Bottle implements Packing {
 
   @Override
   public String pack() {
      return "Bottle";
   }
}