package com.panda.design.creative.builder;

public interface Item {
   public String name();
   public Packing packing();
   public float price();    
}