package com.panda.design.creative.builder;

public interface Packing {
   public String pack();
}