package com.panda.design.creative.builder;

public class Wrapper implements Packing {
 
   @Override
   public String pack() {
      return "Wrapper";
   }
}